# Zelda64Recomp

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakeSettings.json  MMRecomp.sln  MMRecomp.vcxproj  MMRecomp.vcxproj.filters  Makefile  README.md  RecompiledFuncs.vcxproj  RecompiledFuncs.vcxproj.filters  aspMain.us.rev1.toml  build-recomp-binaries.sh  config_example.cheats.en_us.json  config_example.cheats.json  funcs.txt  generate-elf-and-uncompressed-rom.sh  generate-recomp-c-code.sh  launch.vs.json  njpgdspMain.us.rev1.toml  patches.toml  rev1_overlays.txt  us.rev1.toml  vcpkg-configuration.json  vcpkg.json  zeldacontrollerdb.txt
.devcontainer/: Dockerfile  devcontainer.json  install-n64recomp.sh  install-sdl2.sh  post-create.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/linux/: Zelda64Recompiled.desktop  appimage.sh
.github/macos/: Info.plist.in  MoltenVK_icd.json  fixup_bundle.cmake  macports.yaml
.github/workflows/: update-pr-artifacts.yml  validate-internal.yml  validate.yml  validate_external.yml  validate_internal.yml
assets/: LICENSE.txt  alien_small.tga  config_menu.rml  demo.rml  high_scores_alien_1.tga  high_scores_alien_2.tga  high_scores_alien_3.tga  high_scores_defender.tga  invader.rcss  invader.scss  invader.tga  invader_spritesheet.rcss  launcher.rml  main.rcss  present.tga  recomp.rcss  rml.rcss  window.rml
assets/components/: prompt.rml
assets/config_menu/: cheats.rml  control_options.rml  controls.rml  debug.rml  general.rml  graphics.rml  sound.rml
assets/promptfont/: README.md  promptfont.css
assets/scss/: .nvmrc  .stylelintrc  main.scss  package-lock.json  package.json
assets/scss/styles/: base.scss  global.scss
assets/scss/styles/components/: BottomLeft.scss  Button.scss  CenteredPage.scss  Config.scss  ConfigDescription.scss  ConfigGroup.scss  ConfigOption.scss  ControlOption.scss  IconButton.scss  InputConfig.scss  Launcher.scss  MenuListItem.scss  ModMenu.scss  Prompt.scss  SubtitleTitle.scss  Tabs.scss  Toggle.scss  _components.scss
assets/scss/styles/functions/: _spacing.scss
assets/scss/styles/globals/: _old.scss  _scrollbars.scss
assets/scss/styles/mixins/: _helpers.scss  _transitions.scss  _typography.scss
assets/scss/styles/pages/: _pages.scss
cmake/: ZREDetectNEON.cmake  ZREDetectSSE42.cmake
cmake/checks/: cpu_neon.cpp  cpu_sse42.cpp
icons/: app.rc
include/: disable_warnings.h  ovl_patches.hpp  promptfont.h  recomp.h  recomp_config.h  recomp_debug.h  recomp_files.h  recomp_game.h  recomp_helpers.h  recomp_input.h  recomp_overlays.h  recomp_sound.h  recomp_ui.h  rsp.h  rsp_vu.h  rsp_vu_impl.h  rt64_layer.h  zelda_config.h  zelda_debug.h  zelda_game.h  zelda_input.h  zelda_render.h  zelda_sound.h  zelda_support.h  zelda_ui.h
lib/: FindFreetype.cmake
lib/GamepadMotionHelpers/: CMakeLists.txt  GamepadMotion.hpp  README.md
lib/concurrentqueue/: concurrentqueue.h
patches/: .gitignore  Makefile  actor_transform_tagging.c  autosaving.c  better_double_sot.c  billboard_tagging.c  camera_patches.c  camera_patches.h  camera_transform_tagging.c  cheats.c  culling.c  custom_syms.toml  cutscene_patches.c  debug_patches.c  effect_patches.c  effect_transform_tagging.c  event_patches.c  fixes.c  graphics.h  input.c  input.h  input_latency.c  item_transform_tagging.c  message_patches.c  misc_funcs.h  ocarina_effect_patches.c  options.c  particle_transform_tagging.c  patch_helpers.h  patches.h  patches.ld  play_patches.c  play_patches.h  print.c  quicksave_patches.c  required_patches.c  room_patches.c  save_patches.c  skip_sos.c  sky_transform_tagging.c  (+11 more)
patches/code/sub_s/: sub_s.h
portultra/: audio.cpp  events.cpp  mesgqueue.cpp  multilibultra.hpp  scheduler.cpp  task_win32.cpp  threads.cpp  timer.cpp  ultra64.h  ultrainit.cpp
rsp/: .gitignore
shaders/: InterfacePS.hlsl  InterfaceVS.hlsl
src/: cont.cpp  eep.cpp  flash.cpp  math_routines.cpp  overlays.cpp  pak.cpp  pi.cpp  portultra_stubs.cpp  portultra_translation.cpp  print.cpp  recomp.cpp  rt64_layer.cpp  sp.cpp  ui.cpp  ultra_stubs.cpp  vi.cpp
src/game/: config.cpp  controls.cpp  debug.cpp  input.cpp  quicksaving.cpp  recomp_api.cpp  scene_table.cpp
src/main/: main.cpp  register_overlays.cpp  register_patches.cpp  rt64_render_context.cpp  support.cpp  support_apple.mm
src/recomp/: ai.cpp  cont.cpp  dp.cpp  eep.cpp  files.cpp  flash.cpp  overlays.cpp  pak.cpp  patch_loading.cpp  pi.cpp  print.cpp  recomp.cpp  rt64_layer.cpp  ultra_translation.cpp  vi.cpp
src/ui/: ui_color_hack.cpp  ui_config.cpp  ui_elements.cpp  ui_elements.h  ui_events.cpp  ui_launcher.cpp  ui_renderer.cpp  ui_rml_hacks.cpp  ui_rml_hacks.hpp
src/ui/FontEngineScaled/: FontEngineInterfaceScaled.cpp  FontEngineInterfaceScaled.h  FontFace.cpp  FontFace.h  FontFaceHandleScaled.cpp  FontFaceHandleScaled.h  FontFaceLayer.cpp  FontFaceLayer.h  FontFamily.cpp  FontFamily.h  FontProvider.cpp  FontProvider.h  FontTypes.h  FreeTypeInterface.cpp  FreeTypeInterface.h
src/ui/ScaledSVG/: ElementScaledSVG.cpp  ElementScaledSVG.h
src/ui/config_options/: ConfigOption.cpp  ConfigOption.h  ConfigRegistry.cpp  ConfigRegistry.h
src/ui/elements/: ElementConfigGroup.cpp  ElementConfigGroup.h  ElementConfigOption.cpp  ElementConfigOption.h  ElementDescription.cpp  ElementDescription.h  ElementModMenu.cpp  ElementModMenu.h  ElementOptionType.cpp  ElementOptionType.h  ElementOptionTypeButton.cpp  ElementOptionTypeButton.h  ElementOptionTypeCheckbox.cpp  ElementOptionTypeCheckbox.h  ElementOptionTypeColor.cpp  ElementOptionTypeColor.h  ElementOptionTypeDropdown.cpp  ElementOptionTypeDropdown.h  ElementOptionTypeRadioTabs.cpp  ElementOptionTypeRadioTabs.h  ElementOptionTypeRange.cpp  ElementOptionTypeRange.h  ElementOptionTypeTextField.cpp  ElementOptionTypeTextField.h  common.h  presets.cpp  presets.h
src/ui/util/: bem.h  hsv.cpp  hsv.h
ultramodern/: audio.cpp  config.hpp  events.cpp  mesgqueue.cpp  rt64_layer.cpp  scheduler.cpp  scheduling.cpp  task_win32.cpp  threadqueue.cpp  threads.cpp  timer.cpp  ultra64.h  ultrainit.cpp  ultramodern.hpp  utils.hpp
(+13 files in other folders)
